Enlève le bug de l'affichage avec trop de gap du portfolio suite à la modification de PhotoGallery pour la page projet

--- a/components/ui/atoms/ButtonBig/buttonBig.module.scss
+++ b/components/ui/atoms/ButtonBig/buttonBig.module.scss
@@ -1,4 +1,6 @@
 .button {
+    position: relative;
+    overflow: hidden;
     background-color: var(--background-button);
     border: 1px solid var(--background-button);
     border-radius: 5px;
@@ -9,9 +11,19 @@
     display: flex;
     box-shadow: 0 10px 15px -3px var(--color-shadow-main),
     0 4px 6px -2px  var(--color-shadow-second);
+
     &__p {
         color: var(--color-text-button);
         font-size: 2rem;
         font-family: var(--font-button);
+    }
+
+    .ripple {
+        position: absolute;
+        background: rgba(255, 255, 255, 0.35);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        transform-origin: center;
+        pointer-events: none;
     }
 }
