--- a/components/ui/organisms/Portfolio/portfolio.module.scss
+++ b/components/ui/organisms/Portfolio/portfolio.module.scss
@@ -27,7 +27,6 @@
             display: flex;
             gap: 2rem;
             &__column {
-                flex: 1;
                 display: flex;
                 flex-direction: column;
                 gap: 2rem;
